--- a/test.html
+++ b/test.html
@@ -1,11 +1,14 @@
 @extends('layouts.app')
 
-@section('title', 'خانه | وب‌سایت هنری آقای طغیانی')
-@section('body-class', 'bg-black ')
+@section('title', 'صفحه اصلی')
+
+@section('body-class', 'bg-black overflow-hidden')
+
 @section('canvas')
 <!-- Canvas element for animation -->
 <canvas id="bgCanvas"></canvas>
 @endsection
+
 @section('content')
 <div class="relative w-screen h-screen flex items-center justify-center bg-black bg-opacity-60">
     <div class="bg-white bg-opacity-10 border border-white border-opacity-20 rounded-2xl p-10 max-w-4xl text-white flex gap-8 z-20 backdrop-filter backdrop-blur-lg">
