--- a/test.html
+++ b/test.html
@@ -1,30 +1,199 @@
-@extends('layouts.app')
+<!DOCTYPE html>
+<html lang="en">
 
-@section('title', 'صفحه اصلی')
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- CDN Tailwind CSS -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <title>Document</title>
+    <style>
+        /* کدهای سفارشی input.css */
+        @layer components {
 
-@section('body-class', 'bg-black overflow-hidden')
+            .flex-b-20 {
+                flex-basis: 20%;
+            }
 
-@section('canvas')
-<!-- Canvas element for animation -->
-<canvas id="bgCanvas"></canvas>
-@endsection
+            .flex-b-65 {
+                flex-basis: 65%;
+            }
 
-@section('content')
-<div class="relative w-screen h-screen flex items-center justify-center bg-black bg-opacity-60">
-    <div class="bg-white bg-opacity-10 border border-white border-opacity-20 rounded-2xl p-10 max-w-4xl text-white flex gap-8 z-20 backdrop-filter backdrop-blur-lg">
-        
-            <div class="profile-image">
-                <img src="{{ asset('images/profile.png') }}" alt="آقای طغیانی">
+            .flex-b-10 {
+                flex-basis: 15%;
+            }
+
+            .flex-b-15 {
+                flex-basis: 15%;
+            }
+
+            .flex-b-30 {
+                flex-basis: 30%;
+            }
+
+            .flex-b-50 {
+                flex-basis: 50%;
+            }
+
+            .flex-b-55 {
+                flex-basis: 55%;
+            }
+
+            .flex-b-45 {
+                flex-basis: 45%;
+            }
+
+            .flex-b-80 {
+                flex-basis: 80%;
+            }
+
+            .round-50 {
+                border-radius: 50%;
+            }
+
+            .container {
+                width: 90%;
+            }
+
+            .git {
+                bottom: 0px;
+                right: -80px;
+
+            }
+
+            .wgit {
+                width: 40px;
+                height: 40px;
+                border-radius: 90px;
+            }
+
+            .wid35 {
+                width: 35px;
+                height: 35px;
+            }
+
+            .hei-600 {
+                height: 600px;
+            }
+
+            .hei-480 {
+                height: 480px;
+            }
+
+            .part4 {
+                background-image: url('../img/map.png');
+                background-size: cover;
+                min-height: 600px;
+            }
+
+            .form-control {
+                display: block;
+                width: 100%;
+                padding: 0.375rem 0.75rem;
+                font-size: 1rem;
+                font-weight: 400;
+                line-height: 1.5;
+                color: #212529;
+                background-color: #fff;
+                background-clip: padding-box;
+                border: 1px solid #ced4da;
+                -webkit-appearance: none;
+                -moz-appearance: none;
+                appearance: none;
+                border-radius: 0.25rem;
+                transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+            }
+
+            .img-p {
+                width: 50px;
+                height: 50px;
+                border-radius: 50%;
+            }
+
+            .dis-rtl {
+                direction: rtl;
+            }
+        }
+    </style>
+</head>
+
+<body class="">
+    <section id="part1" class="hei-600 my-14">
+        <div class="container mx-auto">
+            <div class="flex justify-around flex-wrap my-6 gap-3">
+                <div class="flex flex-col lg:w-3/12 sm:w-full shadow-lg rounded-md">
+                    <span><img class="rounded-md" src="../img/js.jpg" alt=""></span>
+                    <span class="flex w-full my-3 px-3">
+                        <h2 class="flex-b-80 font-bold text-lg">I love <span class="text-yellow-400">JS</span></h2>
+
+                        
+                    </span>
+                    <span class="flex items-center my-3 px-3">
+                        <span class="flex-b-20 text-center"><img class="img-p" src="../img/IMG_20210718_112941.jpg"
+                                alt=""></span>
+                        <span class="flex-b-65">Mohamed Malmir</span>
+                        <span class="flex-b-15 dis-rtl">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-red-500" viewBox="0 0 20 20"
+                                fill="currentColor">
+                                <path fill-rule="evenodd"
+                                    d="M3.172 5.172a4 4 0 015.656 0L10 6.343l1.172-1.171a4 4 0 115.656 5.656L10 17.657l-6.828-6.829a4 4 0 010-5.656z"
+                                    clip-rule="evenodd" />
+                            </svg>
+                        </span>
+                    </span>
+                </div>
+                <!--card1-->
+                <div class="flex flex-col lg:w-3/12 sm:w-full shadow-lg rounded-md">
+                    <span><img class="rounded-md" src="./img/js.jpg" alt=""></span>
+                    <span class="flex w-full my-3 px-3">
+                        <h2 class="flex-b-80 font-bold text-lg">I love <span class="text-yellow-400">JS</span></h2>
+
+                        <h5 class="flex-b-20 text-gray-400">2044/3/12</h5>
+                    </span>
+                    <span class="flex items-center my-3 px-3">
+                        <span class="flex-b-20 text-center"><img class="img-p" src="./img/IMG_20210718_112941.jpg"
+                                alt=""></span>
+                        <span class="flex-b-65">Mohamed Malmir</span>
+                        <span class="flex-b-15 dis-rtl">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-red-500" viewBox="0 0 20 20"
+                                fill="currentColor">
+                                <path fill-rule="evenodd"
+                                    d="M3.172 5.172a4 4 0 015.656 0L10 6.343l1.172-1.171a4 4 0 115.656 5.656L10 17.657l-6.828-6.829a4 4 0 010-5.656z"
+                                    clip-rule="evenodd" />
+                            </svg>
+                        </span>
+                    </span>
+                </div>
+                <!--card2-->
+                <div class="flex flex-col lg:w-3/12 sm:w-full shadow-lg rounded-md">
+                    <span><img class="rounded-md" src="./img/js.jpg" alt=""></span>
+                    <span class="flex w-full my-3 px-3">
+                        <h2 class="flex-b-80 font-bold text-lg">I love <span class="text-yellow-400">JS</span></h2>
+
+                        <h5 class="flex-b-20 text-gray-400">2044/3/12</h5>
+                    </span>
+                    <span class="flex items-center my-3 px-3">
+                        <span class="flex-b-20 text-center"><img class="img-p" src="./img/IMG_20210718_112941.jpg"
+                                alt=""></span>
+                        <span class="flex-b-65">Mohamed Malmir</span>
+                        <span class="flex-b-15 dis-rtl">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-red-500" viewBox="0 0 20 20"
+                                fill="currentColor">
+                                <path fill-rule="evenodd"
+                                    d="M3.172 5.172a4 4 0 015.656 0L10 6.343l1.172-1.171a4 4 0 115.656 5.656L10 17.657l-6.828-6.829a4 4 0 010-5.656z"
+                                    clip-rule="evenodd" />
+                            </svg>
+                        </span>
+                    </span>
+                </div>
+                <!--card3-->
             </div>
-            <div class="profile-info">
-                <h2>آقای طغیانی</h2>
-                <p>هنرمند، موسیقی‌دان و خالق این اثر هنری</p>
-                <p>آقای طغیانی با سال‌ها تجربه در زمینه موسیقی و هنر، آثار بی‌نظیری را خلق کرده‌اند.</p>
-                <p>ایشان در زمینه‌های مختلف هنری فعالیت دارند و همواره در تلاش برای ارائه آثار با کیفیت و متفاوت هستند.</p>
-                <p>هدف اصلی ایشان ارائه هنر به شکلی است که بتواند بر دل مخاطب نشسته و احساسات او را برانگیزد.</p>
-                <p>برای کسب اطلاعات بیشتر و مشاهده آثار ایشان، می‌توانید از طریق لینک‌های زیر اقدام نمایید.</p>
-            </div>
+            <!--flex-->
         </div>
-    </div>
-</div>
-@endsection
+        <!--container-->
+    </section>
+    <!--part4-->
+</body>
+
+</html>
